--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
   --crazy-color5: #7149C6;
   --crazy-color1: #FC2947;
   --crazy-color3: #FE6244;
-  --crazy-color2: #FFDEB9;
+  --crazy-color2: #f0ecf9;
   --crazy-colorDis: #FFDEB9;
   --boxRadius: 5px;
 --shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
@@ -139,7 +139,7 @@ footer {
 .instructions {
   grid-area: instruct;
 
-  align-self: center;
+  align-self: end;
 
   font-size: 2rem;
   font-weight: 600;
@@ -170,17 +170,19 @@ footer {
 
 
 .section-1 {   
-  margin-top: 8em;
+  margin-top: 8rem;
+  margin-bottom: -1rem;
   background-color: var(--crazy-color2);
   grid-area: section1;
  padding: 10px;
 justify-self: stretch;
+align-self: start;
 
   border-radius: var(--boxRadius);
 
 
    display: grid;
-   align-items: center;
+   
    grid-template-columns: 1fr;
    grid-template-areas: 
    "digit"
@@ -230,6 +232,11 @@ justify-self: stretch;
 
 #firstButton {
   margin: 1.5rem 0;
+}
+
+#challenge {
+  color: var(--crazy-color2);
+  font-size: medium;
 }
 
 /*.section-2 {
@@ -307,7 +314,6 @@ font-weight: 600;
   grid-area: sumTree;
 
 }
-
 
 
 
@@ -452,6 +458,7 @@ textarea:focus, input:focus{
  .section-1 {
   margin-top: -1px;
   justify-self: center;
+  margin-bottom: -0.75rem;
  }
 
   
@@ -467,6 +474,7 @@ textarea:focus, input:focus{
 
 .section-4 {
   padding: .75rem 1.5rem;
+  margin-bottom: -1rem;
  
 }
 
