Added Info icon info
Info icon tooltip added for number restrictions (a11y compliant)

--- a/main.css
+++ b/main.css
@@ -409,7 +409,34 @@ textarea:focus, input:focus{
 }
 
 
+/*Tooltip*/
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted var(--crazy-color1);
+  color: var(--crazy-color1);
 
+  cursor: default;
+  font-size: medium;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: var(--crazy-color1);
+  color: var(--crazy-color2);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
 
 
 /*media Qs*/
