--- a/main.css
+++ b/main.css
@@ -203,7 +203,7 @@ align-self: start;
 }
 
 .infoRan {
-  padding: 2rem;
+  padding: 1rem 0;
 
 }
 
@@ -233,11 +233,11 @@ align-self: start;
 }
 
 #replacementText {
-  margin-top: -1rem;
+  margin-top: -3rem;
 }
 
 #firstButton {
-  margin: 1.5rem 0;
+  margin: 0.5rem 0 3rem 0;
 }
 
 #challenge {
@@ -362,7 +362,6 @@ Input:invalid:focus {
 */
 button {
   cursor: pointer;
-  margin: 15px;
   padding: 5px 10px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   border-radius: 0.25rem;
@@ -499,7 +498,7 @@ textarea:focus, input:focus{
 
 
   .infoRan {
-    padding: 1rem;
+    padding: 0.1rem 0 0.5rem 0;
   }
 
 
@@ -539,6 +538,10 @@ textarea:focus, input:focus{
   
   #tree0 {
     margin-top: 0rem;
+  }
+
+  #replacementText {
+    margin-top: -3.5rem;
   }
 
   .tooltip .tooltiptext {
