--- a/main.css
+++ b/main.css
@@ -342,6 +342,7 @@ button:disabled  {
 input {
     border-radius: 0.25rem;
     text-align: center;
+    padding: 2px 10px;
     margin: 5px 10px;
     background-color: var(--crazy-color1);
     border: 4px solid var(--crazy-color3);
