--- a/main.css
+++ b/main.css
@@ -79,7 +79,7 @@
  
   .container:before {
     position: absolute;
-    content: 'Guess the Digits';
+    content: 'Match the Digit';
     z-index: -1;
 
     top: 0px;
@@ -203,7 +203,10 @@ align-self: start;
 }
 
 .infoRan {
-  padding: 1rem 0;
+  padding: 2rem 1rem 0.5rem 1rem;
+  font-size: 1rem;
+  color: var(--crazy-color5);
+
 
 }
 
@@ -345,7 +348,7 @@ input {
     padding: 5px 10px;
     margin: 5px 10px;
     background-color: var(--crazy-color1);
-    border: 4px solid var(--crazy-color3);
+    border: 4px solid var(--crazy-color5);
     color: var(--crazy-color2);
 
     font-size: 16px !important; /*prevent zoom on mobile*/
@@ -426,13 +429,13 @@ textarea:focus, input:focus{
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 110px;
+  width: 180px;
   background-color: var(--crazy-color1);
   color: var(--crazy-color2);
-  text-align: center;
+  text-align: left;
   border-radius: 6px;
-  padding: 5px 0;
-
+  padding: 10px;
+margin-left: 10px;
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
@@ -498,9 +501,7 @@ textarea:focus, input:focus{
   }
 
 
-  .infoRan {
-    padding: 0.1rem 0 0.5rem 0;
-  }
+  
 
 
 .section-4 {
@@ -546,8 +547,14 @@ textarea:focus, input:focus{
   }
 
   .tooltip .tooltiptext {
-    width: 80px;
-    font-size: 0.7rem;  }
+    width: 120px;
+    font-size: 0.7rem;  
+  }
+
+  .infoRan1 {
+    margin-top: -15px;
+   
+  }
 
 }
 
