--- a/main.css
+++ b/main.css
@@ -554,10 +554,9 @@ margin-left: 10px;
     font-size: 0.7rem;  
   }
 
-  .infoRan1 {
+  .infoRan {
     margin-top: -15px;
     font-size: 1.1rem;
-   
   }
 
 }
