--- a/main.css
+++ b/main.css
@@ -16,66 +16,47 @@
 
 }
 
-/*
-  1. Use a more-intuitive box-sizing model.
-*/
-*, *::before, *::after {
-    box-sizing: border-box;
+/*CSS reset start */
+
+/*prevent the odd rendering*/
+html{
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
   }
-  /*
-    2. Remove default margin
-  */
-  * {
+
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
     margin: 0;
-  }
-  /*
-    3. Allow percentage-based heights in the application
-  */
-  html, body {
-    height: 100%;
-      max-width: 100%;
-      overflow-x: hidden;
-  }
-
-  /*
-    Typographic tweaks!
-    4. Add accessible line-height
-    5. Improve text rendering
-  */
-  body {
-    line-height: 1.5;
-    color: var(--crazy-color2);
-    background-color: var(--crazy-color5);
-
-
-    -webkit-font-smoothing: antialiased;
-  }
-  /*
-    6. Improve media defaults
-  */
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  /*
-    7. Remove built-in form typography styles
-  */
-  input, button, textarea, select {
-    font: inherit;
-  }
-  /*
-    8. Avoid text overflows
-  */
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
-  /*
-    9. Create a root stacking context
-  */
-  #root, #__next {
-    isolation: isolate;
+    padding: 0;
   }
   
+  :root {
+    box-sizing: border-box;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+    position: relative;
+    font-family: system-ui, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol", "Noto Color Emoji";
+    min-height: 100%;
+  }
+  body {
+    position: relative;
+    min-height: 100vh;
+    font-size: 100%;
+    line-height: 1.5;
+  }
+  
+  input,
+  textarea,
+  button {
+    font-size: inherit;
+    font-family: inherit;
+  }
+
+  /*CSS reset end */
  
   .container:before {
     position: absolute;
