--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@500&display=swap');
 :root {
-  --crazy-color5: #4f338a;
+  --crazy-color5: #5a3a9e;
   --crazy-color1: #FC2947;
   --crazy-color3: #FE6244;
   --crazy-color2: #f0ecf9;
